# kafka-rs

./: Cargo.toml  GEMINI.md
docs/superpowers/plans/: kafka-rs-master-plan.md  kafka-rs-phase1.md  kafka-rs-phase2.md  kafka-rs-phase3.md  kafka-rs-phase4.md
docs/superpowers/specs/: kafka-rust-design.md
scripts/: consumer.rs  producer.rs
src/: broker.rs  codec.rs  lib.rs  main.rs  partition.rs  protocol.rs
src/storage/: index.rs  local.rs  mod.rs
tests/: broker_test.rs  partition_test.rs  server_test.rs  storage_test.rs
