[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kafka-rs"
path = "src/main.rs"

[[bin]]
name = "producer"
path = "scripts/producer.rs"

[[bin]]
name = "consumer"
path = "scripts/consumer.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kafka-protocol = "0.17.0"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
